--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -117,16 +117,11 @@ li:hover img {
     }
 }
 
-.flexLogoMobile{
-  display: flex;
-  justify-content: center;
-}
-
 .nav__img{
   width: 10rem;
   
- margin: 0 auto;
-  top:5rem;
+ 
+  
   z-index: 3;
   filter: drop-shadow(2px 2px 2px rgb(0, 0, 0));
 }
@@ -144,6 +139,7 @@ li:hover img {
   .nav__label{
     display: flex;
     justify-content: center;
+    margin-top: 2rem;
       cursor: pointer;
   }
 
