--- a/src/Components/Marcas/Marcas.scss
+++ b/src/Components/Marcas/Marcas.scss
@@ -10,3 +10,11 @@
         filter: drop-shadow(1px 1px 1px rgb(255, 255, 255));
     }
 }
+
+@media screen and (max-width: 479px){
+    .flexMarcas{
+        img{
+            width: 3rem;
+        }
+    }
+}
