--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -1,9 +1,9 @@
 
 
 .iFooter{
-    max-width: 100%;
+    
     position: absolute;
-    opacity: 0.4;
+    opacity: 0.4;max-width: 100%;
 }
 
 .tijeraFooter{
@@ -12,6 +12,13 @@
     filter: drop-shadow(2px 2px 2px rgb(0, 0, 0));
 
 }
+
+@media screen and (max-width: 479px){
+    .tijeraFooter{
+        width: 3rem;
+    }
+}
+    
 
 .flexPadreFooter {
     
@@ -27,10 +34,17 @@
     flex-direction: column;
     align-items: center;
    justify-content: center;
-   gap:0.3rem;
-   
-   
-       
+   gap:0.3rem;   
+}
+
+@media screen and (max-width: 479px){
+    .flexTitleRedes{
+        h2{
+            font-size: 1.3rem;
+            margin-top: .5rem;
+            margin-bottom: .5rem;
+        }
+    }
 }
 
 .logosRedes {
@@ -40,10 +54,23 @@
     gap:3rem
    
 }
+
+@media screen and (max-width: 479px){
+    .logosRedes{
+        gap: 1rem;
+    }
+}
+
 .logoR{
     width: 3rem;
     position: relative;
     filter: drop-shadow(2px 2px 2px rgb(0, 0, 0));
+}
+
+@media screen and (max-width: 479px){
+    .logoR{
+        width: 1rem;
+    }
 }
 
 h2{
@@ -76,8 +103,24 @@ p{
         font-size: 1rem;
     }
 }
+
+@media screen and (max-width: 479px){
+    .mapFlex{
+        p{
+            font-size: .8rem;
+           
+        }
+    }
+}
+
 .map{
     width: 2rem;
+}
+
+@media screen and (max-width: 479px){
+    .map{
+        width: 1rem;
+    }
 }
 
 .flexNavFooter{
