--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -12,13 +12,15 @@
     font-size: 5rem;
     color: rgb(255, 255, 255);
     text-align: center;
-   
+}
 
+@media screen and (max-width: 479px){
+    .titleHome{
+        font-size: 3rem;
+    }
 }
 
 .subTitleHome{
-   
-   
     font-family: 'Gruppo', cursive;
     font-size: 2rem;
     color: rgb(255, 255, 255);
@@ -29,8 +31,6 @@
 
 .textHome{
     font-family: 'Great Vibes', cursive;
-   
-    
     font-size: 3rem;
     color: rgb(255, 255, 255);
     text-align: center;
@@ -38,6 +38,11 @@
    
 }
 
+@media screen and (max-width: 479px){
+    .textHome{
+        font-size: 1.5rem;
+    }
+}
 
 .text{
 
@@ -61,9 +66,11 @@ p{
         z-index: 2;
     }
 
-
-
-
+@media screen and (max-width: 479px){
+    p{
+        font-size: 2rem;
+    }
+}
 
 
 .flexEndHome{
@@ -102,6 +109,20 @@ p{
     }
 }
 
+@media screen and (max-width: 479px){
+    .flexEndHome{
+       margin-top: 10rem;
+       margin-left: .5rem;
+        margin-right: .5rem;
+       h4{
+        font-size: 1rem;
+       }
+       .concepto{
+        font-size: 1rem;
+       }
+    }
+}
+
 .ojosImg {
     width: 100%;
     filter: gray; 
@@ -125,6 +146,12 @@ p{
     to {
         opacity: 1;
         scale: 100%;
+    }
+}
+
+@media screen and (max-width: 479px){
+    .ojosImg{
+        max-width: 100%;
     }
 }
 
