--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -15,7 +15,7 @@
 
 @media screen and (max-width: 479px){
     .tijeraFooter{
-        width: 3rem;
+       display: none;
     }
 }
     
@@ -23,11 +23,14 @@
 .flexPadreFooter {
     
     display: flex;
-    justify-content: center;
-    justify-content: space-between;
-    align-items:flex-start;
+   justify-content: center;
+    
+   
    
 }
+
+
+
 
 .flexTitleRedes {
     display: flex;
