--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -150,13 +150,21 @@ li:hover img {
       position: fixed;
       text-align: center;
       flex-direction: column;
-      top:3.5rem;
+      margin-top: 2rem;
       clip-path: polygon(100% 0, 0 0, 0 0, 100% 0);
       transition: clip-path .5s;
-      background-color: transparentize($color: #ffffff, $amount: .5);
-      width: 100%;
+      background-color: transparentize($color: goldenrod, $amount: .0);
+      width: 85%;
+      z-index: 2;
+      border-radius: 1rem;
      
-     
+     li{
+      font-family: 'Gruppo', cursive;
+      color: black;
+      font-size: 2rem;
+      list-style-type: none;
+      font-weight: bolder;
+     }
   }
 
   .nav__imput:checked + .ulFlex{
