--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -111,7 +111,7 @@ p{
 
 @media screen and (max-width: 479px){
     .flexEndHome{
-       margin-top: 10rem;
+      
        margin-left: .5rem;
         margin-right: .5rem;
        h4{
@@ -119,6 +119,7 @@ p{
        }
        .concepto{
         font-size: 1rem;
+        text-shadow: 1px 1px 1px rgb(255, 255, 255);
        }
     }
 }
