adaptacion sitio mobile

--- a/src/Components/Marcas/Marcas.scss
+++ b/src/Components/Marcas/Marcas.scss
@@ -5,9 +5,10 @@
     justify-content: space-around;
     background-color: black;
     padding-bottom: 1rem;
+    background-color: goldenrod;
     img{
         width: 7rem;
-        filter: drop-shadow(1px 1px 1px rgb(255, 255, 255));
+       
     }
 }
 
