--- a/src/Components/Galeria/Galeria.scss
+++ b/src/Components/Galeria/Galeria.scss
@@ -5,23 +5,33 @@
     gap: .5rem;
     margin-bottom: 5rem;
     
-    
-    
     img{
         width: 5rem;
         height: 20rem;
         flex-grow: 1;
         object-fit: cover;
-      
         transition: .5s ease; 
         cursor:pointer;
-       
-        
     }
+
     img:hover{
         scale: 1.1;
         opacity: 1;
         filter: contrast(120%);
+    }
+}
+
+@media screen and (max-width: 479px){
+    .flexImg{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(7, 1fr);
+        justify-items: center;
+
+        img{
+            width: 10rem;
+        height: 20rem;
+        }
     }
 }
 
@@ -30,7 +40,7 @@
     color: white;
     text-align: center;
     font-size: 3rem;
-    margin-top: 0;
+    margin-top: 10rem;
    
 }
 
@@ -38,8 +48,7 @@
     text-align: center;
     font-size: 3rem;
     margin-bottom: 2rem;
-    margin-top: 6rem;
-    padding-top: 2rem;
+    margin-top: 10rem;
 }
 
 .subtitle3Gallery{
