--- a/src/Components/Nosotros/Nosotros.scss
+++ b/src/Components/Nosotros/Nosotros.scss
@@ -1,9 +1,4 @@
-.nosotros{
-    width: 100%;
-    position: absolute;
-    opacity: .6;
-    
-}
+
 
 .titleWalter{
     position: relative;
@@ -12,17 +7,17 @@
     font-size: 3rem;
     text-align: center;
     text-shadow: 1px 1px 1px black;
-    margin-top: 6rem;
-    padding-top: 5rem;
+    margin-top: 10rem;
+    
 
 }
 
 .pNosotros{
     font-size: 1.5rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     text-align: justify;
     margin-bottom: 20rem;
-    
+    z-index: 0;
 }
 
