--- a/src/Components/Service/service.scss
+++ b/src/Components/Service/service.scss
@@ -3,19 +3,20 @@
 section{
     img{
         width: 10rem;
+      
     }
     h1, h2, p{
         color: white;
        font-family: 'Gruppo', cursive;
        font-size: 1rem;
+      
        
     }
     h1{
         
         text-align: center;
-        font-size: 4rem;
-        margin-top: 6rem;
-        padding-top: 2rem;
+        font-size: 3rem;
+        margin-top: 10rem;
         text-shadow: 1px 1px 1px black;
     }
     h2{
@@ -39,6 +40,7 @@ section{
     list-style-type: none;
     display: flex;
     gap:1rem;
+  
     li{
         color: white;
         font-family: 'Gruppo', cursive;
@@ -80,4 +82,11 @@ section{
     margin-bottom: 2rem;
 }
 
-
+@media screen and (max-width: 479px){
+    .adicionales{
+        margin-bottom: 5rem;
+        h2{
+            margin-bottom: 1rem;
+        }
+    }
+}
