--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -48,13 +48,22 @@
    }
 }
 
+@media screen and (max-width: 992px){
+    .flexTitleRedes{
+        h2{
+            
+            margin-top: .5rem;
+            margin-bottom: 5rem;
+        }
+    }
+}
+
 @media screen and (max-width: 479px){
     .flexTitleRedes{
         h2{
             font-size: 1.3rem;
             margin-top: .5rem;
             margin-bottom: 11rem;
-            
         }
     }
 }
