--- a/src/Components/Marcas/Marcas.scss
+++ b/src/Components/Marcas/Marcas.scss
@@ -4,11 +4,20 @@
     align-items: center;
     justify-content: space-around;
     background-color: black;
-    padding-bottom: 1rem;
+    
     background-color: goldenrod;
     img{
         width: 7rem;
        
+    }
+}
+
+@media screen and (max-width: 992px){
+    .flexMarcas{
+        img{
+            width: 4rem;
+           
+        }
     }
 }
 
