--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -17,7 +17,11 @@
   filter: drop-shadow(2px 2px 1rem rgb(253, 253, 253));
 }
 
-
+@media screen and (max-width: 992px){
+  .logoWalter{
+    width: 6rem;
+  }
+}
 
 @media screen and (max-width: 479px){
   .logoWalter{
