--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -14,8 +14,16 @@
     text-align: center;
 }
 
+@media screen and (max-width: 992px){
+    .titleHome{
+        margin-top: 8rem;
+        
+    }
+}
+
 @media screen and (max-width: 479px){
     .titleHome{
+        margin-top: 10rem;
         font-size: 3rem;
     }
 }
@@ -65,6 +73,12 @@ p{
         font-size: 3.5rem;
         
     }
+
+@media screen and (max-width: 992px){
+    p{
+        font-size: 2.5rem;
+    }
+}
 
 @media screen and (max-width: 479px){
     p{
