--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -61,7 +61,6 @@
   display: flex;
   gap:3rem;
   justify-content: space-around;
-  
   margin-top: 0;
   right: 0%;
   margin-right: 1rem;
@@ -71,7 +70,11 @@
  
 }
 
-
+@media screen and (max-width: 992px){
+  .ulFlex{
+    gap:2rem;
+  }
+}
 
 .tijeras{
   width: 1rem;
