--- a/src/Components/Nosotros/Nosotros.scss
+++ b/src/Components/Nosotros/Nosotros.scss
@@ -12,6 +12,12 @@
 
 }
 
+@media screen and (max-width: 479px){
+    .titleWalter{
+        margin-top: 3rem;
+    }
+}
+
 .pNosotros{
     font-size: 1.5rem;
     margin-left: 1rem;
