--- a/src/Components/Service/service.scss
+++ b/src/Components/Service/service.scss
@@ -10,7 +10,6 @@ section{
        font-family: 'Gruppo', cursive;
        font-size: 1rem;
       
-       
     }
     h1{
         
@@ -23,6 +22,14 @@ section{
         font-size: 1.5rem;
     }
     
+}
+
+@media screen and (max-width: 479px){
+    section{
+        h1{
+            margin-top: 3rem;
+        }
+    }
 }
 
 .servFlexPadre{
