--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -163,18 +163,18 @@ li:hover img {
       position: fixed;
       text-align: center;
       flex-direction: column;
-      margin-top: 5rem;
+      margin-top: 3rem;
       clip-path: polygon(100% 0, 0 0, 0 0, 100% 0);
       transition: clip-path .5s;
-      background-color: transparentize($color: goldenrod, $amount: .0);
+      background-color: transparentize($color: rgb(67, 48, 0), $amount: .1);
       width: 85%;
       z-index: 2;
-      border-radius: 1rem;
+      
      
      li{
       font-family: 'Gruppo', cursive;
-      color: black;
-      font-size: 2rem;
+      color: rgb(255, 255, 255);
+      font-size: 1.5rem;
       list-style-type: none;
       font-weight: bolder;
       
